--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         hshifjisjfjosjfoko
         venugopal-08
         adding paragraphs
-        This is a paragraphs
+        This is a para
     </P>
 </body>
 </html>
